# Rust-CLI-App

./: Cargo.toml  README.md  main.rs  test_script.py
files/: new_file.txt  test_string.txt
src/: main.rs
src/experiments/: ex_cli.rs  ex_condition.rs  ex_files.rs  ex_hashmaps.rs  ex_http.rs  ex_json.rs  ex_looper.rs  ex_mods.rs  ex_optionum.rs  ex_rand.rs  ex_strings.rs  ex_structs.rs  ex_tuples.rs  ex_vars.rs  mod.rs
src/my_structs/: mod.rs  strcts.rs
src/tests/: mod.rs
