[package]
name = "experimentation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2" }
rand = { version = "0.8.5" }
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
futures = "0.3.24"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"